adding memory experimens

--- a/experiments/outputs/results_Mem_Expected_D3/table_memory_latex.tex
+++ b/experiments/outputs/results_Mem_Expected_D3/table_memory_latex.tex
@@ -1,7 +1,7 @@
 
-egin{tabular}{lccccc}
+\begin{tabular}{lccccc}
 \hline
-	extbf{Instance} & 	extbf{n} & 	extbf{m} & 	extbf{bmssp-wc (MB)} & 	extbf{bmssp-expected (MB)} & 	extbf{Ratio} \ \hline
+\textbf{Instance} & \textbf{n} & \textbf{m} & \textbf{bmssp-wc (MB)} & \textbf{bmssp-expected (MB)} & \textbf{Ratio} \\ \hline
 random8D3.gr & 8 & 24 & 2.64 & 2.64 & 1.000 \\
 random16D3.gr & 16 & 48 & 2.64 & 2.64 & 1.000 \\
 random32D3.gr & 32 & 96 & 2.65 & 2.65 & 1.000 \\
